# morefusion

./: .flake8  .generate_readme.py  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  README.md.in  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
ros/franka_control_custom/: CMakeLists.txt  README.md  franka_control_custom_plugin.xml  package.xml
ros/franka_control_custom/arduino/: suction_controller.ino
ros/franka_control_custom/cfg/: compliance_param.cfg  desired_mass_param.cfg
ros/franka_control_custom/config/: franka_control_custom.yaml
ros/franka_control_custom/launch/: cartesian_impedance_controller.launch  cartesian_velocity_controller.launch  franka_control.launch
ros/franka_control_custom/scripts/: create_udev_rules.sh  set_suction_service.py
ros/franka_control_custom/src/: cartesian_impedance_controller.cpp  cartesian_velocity_controller.cpp  franka_state_controller.cpp
ros/franka_control_custom/udev/: 90-arduino.rules
ros/franka_description_custom/: CMakeLists.txt  package.xml
ros/franka_description_custom/robots/: panda_arm_suction_gripper.urdf.xacro  panda_arm_suction_gripper_and_scene.urdf.xacro  panda_arm_suction_gripper_objslampp.urdf.xacro
ros/morefusion_panda/: CMakeLists.txt  package.xml
ros/morefusion_panda/launch/: panda.launch  panda_control.launch
ros/morefusion_panda/nodes/: joint_position_service.py  linear_pose_service.py  set_suction_service.py
ros/morefusion_panda/robots/: panda.urdf.xacro  suction_gripper.xacro
ros/morefusion_panda/scripts/: create_udev_rules.sh
ros/morefusion_panda/src/: pose_service.cpp  update_scene_service.cpp
ros/morefusion_panda_ycb_video/: CMakeLists.txt
ros/morefusion_panda_ycb_video/cfg/: OctomapServer.cfg
ros/morefusion_panda_ycb_video/config/: RealSenseD435RGBD_814412071942.yaml
ros/morefusion_panda_ycb_video/examples/: example_rosbag_play_rs_rgbd.launch  example_setup_dynamic.desk.launch  example_setup_dynamic.robot.launch  example_setup_static.desk.launch  example_setup_static.robot.launch  example_singleview_3d_pose_estimation.launch
ros/morefusion_panda_ycb_video/launch/: rosbag_play_rs_rgbd.launch  rs_rgbd.launch  rviz_dynamic.robot.launch  rviz_static.desk.launch  rviz_static.robot.launch  setup_static.robot.launch  visualize_rs_rgbd.launch
ros/morefusion_panda_ycb_video/msg/: ObjectClassArray.msg  VoxelGrid.msg  VoxelGridArray.msg
ros/morefusion_panda_ycb_video/nodes/: collision_based_pose_refinement.py  depth_to_rgb.py  draw_instance_segmentation.py  label_image_decomposer.py  mask_rcnn_instance_segmentation.py  object_mapping.py  object_poses_to_markers.py  render_mesh_markers.py  render_voxel_grids.py  republish_tf_static_for_rosbag.py  rosbag_play_rs_rgbd.py  select_picking_order.py  singleview_3d_pose_estimation.py  tile_image.py  voxel_grids_to_markers.py  voxel_grids_to_mesh_markers.py
ros/morefusion_panda_ycb_video/ri/: pick_and_place.py
ros/morefusion_panda_ycb_video/rvizconfig/: static.desk.rviz  static.robot.rviz
ros/morefusion_panda_ycb_video/src/: OctomapServer.cpp
ros/morefusion_ycb_video/: CMakeLists.txt  package.xml
ros/morefusion_ycb_video/cfg/: OctomapServer.cfg
ros/morefusion_ycb_video/config/: RealSenseD435RGBD_814412071258.yaml
ros/morefusion_ycb_video/examples/: example_mask_rcnn_instance_segmentation.launch  example_rosbag_play_rs_rgbd.launch  example_setup_dynamic.desk.launch  example_setup_dynamic.robot.launch  example_setup_static.desk.launch  example_setup_static.robot.launch  example_singleview_3d_pose_estimation.launch
ros/morefusion_ycb_video/launch/: calibrate_handeye_coordination.launch  data_collection.launch  mask_rcnn_instance_segmentation.launch  orb_slam2_d435_rgbd.launch  rosbag_play_rs_rgbd.launch  rosbag_play_setup_static.robot.launch  rs_rgbd.launch  rs_rgbd.robot.814412071258.xml  rviz_dynamic.desk.launch  rviz_dynamic.robot.launch  rviz_static.desk.launch  rviz_static.robot.launch  setup_dynamic.desk.launch  setup_dynamic.robot.launch  setup_static.desk.launch  setup_static.robot.launch  setup_static.xml  singleview_3d_pose_estimation.launch  visualize_rs_rgbd.launch
ros/morefusion_ycb_video/msg/: ObjectClassArray.msg  ObjectPoseArray.msg  VoxelGrid.msg  VoxelGridArray.msg
ros/morefusion_ycb_video/nodes/: collision_based_pose_refinement.py  draw_instance_segmentation.py  mask_rcnn_instance_segmentation.py  object_mapping.py  object_poses_to_markers.py  render_mesh_markers.py  render_voxel_grids.py  select_picking_order.py  singleview_3d_pose_estimation.py  tile_image.py  voxel_grids_to_markers.py  voxel_grids_to_mesh_markers.py
ros/morefusion_ycb_video/nodes_robot/: get_scanning_poses.py  robot_demo_node.py  robot_interface.py  robot_interface2.py  world_interface.py
ros/morefusion_ycb_video/ri/: pick_and_place.py
ros/morefusion_ycb_video/rvizconfig/: calibrate_handeye_coordination.rviz
ros/morefusion_ycb_video/src/: OctomapServer.cpp
ros/morefusion_ycb_video/srv/: MoveToJointPosition.srv  RenderVoxelGridArray.srv
ros/panda_moveit_config_custom/: CMakeLists.txt  README.md  package.xml
ros/panda_moveit_config_custom/config/: panda_arm_suction.srdf.xacro  panda_arm_suction.xacro  panda_arm_suction_demo1.srdf.xacro  panda_arm_suction_demo1.xacro  panda_arm_suction_demo2.srdf.xacro  panda_arm_suction_demo2.xacro
ros/panda_moveit_config_custom/launch/: move_group_demo1.launch  move_group_demo2.launch  move_group_suction.launch  panda_moveit_demo1.launch  panda_moveit_demo2.launch  panda_moveit_suction.launch  planning_context_demo1.launch  planning_context_demo2.launch  planning_context_suction.launch
ros/ros_objslampp_msgs/: CMakeLists.txt  package.xml
ros/ros_objslampp_msgs/msg/: ObjectClass.msg  ObjectClassArray.msg  ObjectPose.msg  ObjectPoseArray.msg  VoxelDimensions.msg  (+2 more)
ros/ros_objslampp_panda/: CMakeLists.txt  README.md  package.xml
ros/ros_objslampp_py2/: CMakeLists.txt  package.xml
ros/ros_objslampp_srvs/: CMakeLists.txt  package.xml
ros/ros_objslampp_ycb_video/: CMakeLists.txt  CPPLINT.cfg  package.xml
(+934 files in other folders)
