<?xml version="1.0"?>
<package format="2">
  <name>franka_description_custom</name>
  <version>0.1.0</version>
  <description>franka_description contains custom URDF files and meshes of Franka Emika robots</description>
  <maintainer email="djl11@ic.ac.uk">Daniel Lenton</maintainer>
  <author email="djl11@ic.ac.uk">Daniel Lenton</author>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
