<?xml version="1.0"?>
<package format="2">
  <name>morefusion_ycb_video</name>
  <version>0.1.0</version>
  <description>Specific to objslampp for ycb_video example</description>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <author email="www.kentaro.wada@gmaill.com">Kentaro Wada</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>jsk_interactive_marker</exec_depend>
  <exec_depend>jsk_perception</exec_depend>
  <exec_depend>jsk_recognition_utils</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>jsk_tools</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>morefusion_panda</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>orb_slam2_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
</package>
