<?xml version="1.0"?>
<package format="2">
  <name>ros_objslampp_msgs</name>
  <version>0.1.0</version>
  <description>ROS messages specific to objslampp</description>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <author email="www.kentaro.wada@gmaill.com">Kentaro Wada</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
