<?xml version="1.0"?>
<package format="2">
  <name>ros_objslampp_py2</name>
  <version>0.1.0</version>
  <description>The ROS package of objslampp compatible to Python2</description>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <author email="www.kentaro.wada@gmaill.com">Kentaro Wada</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
