<?xml version="1.0"?>
<package format="2">
  <name>ros_objslampp_ycb_video</name>
  <version>0.1.0</version>
  <description>The ROS package of objslampp specific for ycb_video example</description>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <author email="www.kentaro.wada@gmaill.com">Kentaro Wada</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
