<?xml version="1.0"?>
<package format="2">
  <name>ros_objslampp_ycb_video</name>
  <version>0.1.0</version>
  <description>Specific to objslampp for ycb_video example</description>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <author email="www.kentaro.wada@gmaill.com">Kentaro Wada</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>ros_objslampp_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>jsk_perception</exec_depend>
  <exec_depend>orb_slam2_ros</exec_depend>
</package>
